examples/neg/high_loop_grow/alice.oio
ALICE

channel BOB/B1@{H} : int@{H};

channel BOB/B2@{H} : int@{H};

A1@{H} (secret : int@{H}) {
    send(BOB/B1, secret+1);
    send(BOB/B2, secret+1);
}

A2@{H} (secret : int@{H}) {
    print("ALICE/A2 received", secret);
    send(BOB/B2, secret+1);
}
